// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 hBiKMf"
>
  <div
    class="card__Container-s87lnr-1 caHgNs"
  >
    <p
      class="card__Title-s87lnr-0 jdOPJc"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iaKoMf"
    >
      <div
        class="card__Item-s87lnr-8 gcsINQ"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 gEGNYf"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 fxzWML"
        >
          <p
            class="card__SubTitle-s87lnr-3 eKKtKc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 bRMPYp"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 caHgNs"
  >
    <p
      class="card__Title-s87lnr-0 jdOPJc"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iaKoMf"
    >
      <div
        class="card__Item-s87lnr-8 gcsINQ"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 gEGNYf"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 fxzWML"
        >
          <p
            class="card__SubTitle-s87lnr-3 eKKtKc"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 bRMPYp"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 hBiKMf"
>
  <div
    class="card__Container-s87lnr-1 caHgNs"
  >
    <p
      class="card__Title-s87lnr-0 jdOPJc"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iaKoMf"
    >
      <div
        class="card__Item-s87lnr-8 gcsINQ"
      >
        <img
          class="card__Image-s87lnr-7 gEGNYf"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 fxzWML"
        >
          <p
            class="card__SubTitle-s87lnr-3 eKKtKc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 bRMPYp"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 caHgNs"
  >
    <p
      class="card__Title-s87lnr-0 jdOPJc"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iaKoMf"
    >
      <div
        class="card__Item-s87lnr-8 gcsINQ"
      >
        <img
          class="card__Image-s87lnr-7 gEGNYf"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 fxzWML"
        >
          <p
            class="card__SubTitle-s87lnr-3 eKKtKc"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 bRMPYp"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
